fix a couple of issues on small screens

--- a/src/components/BasePage/BasePage.module.css
+++ b/src/components/BasePage/BasePage.module.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   height: var(--header-height);
   justify-content: flex-end;
-  padding: 0 1.25rem;
+  padding: 0 1rem;
 }
 
 .heading {
@@ -52,7 +52,7 @@
 
 .content {
   height: 100%;
-  padding: 1.25rem;
+  padding: 1rem;
 }
 
 @media (min-width: 768px) {
