--- a/src/components/SearchPage/EpisodeResults.module.css
+++ b/src/components/SearchPage/EpisodeResults.module.css
@@ -2,11 +2,8 @@
   padding: 1rem 0;
 }
 
-.episodeList > article + article {
-  border-top: 1px solid transparent;
-  border-image-slice: 1;
-  border-image-source:
-    linear-gradient(to right, rgba(0, 0, 0, 0), var(--color-dark-grey), rgba(0, 0, 0, 0));
+.episodeList > article {
+  border: 0;
 }
 
 .spinner {
@@ -17,5 +14,12 @@
 @media (min-width: 768px) {
   .episodeList {
     padding: 1rem;
+  }
+
+  .episodeList > article + article {
+    border-top: 1px solid transparent;
+    border-image-slice: 1;
+    border-image-source:
+      linear-gradient(to right, rgba(0, 0, 0, 0), var(--color-dark-grey), rgba(0, 0, 0, 0));
   }
 }
