--- a/src/components/SearchPage/SearchPage.module.css
+++ b/src/components/SearchPage/SearchPage.module.css
@@ -22,7 +22,6 @@
 .searchBar {
   transform: translateY(4.5rem);
   transition: transform 275ms;
-  width: 100%;
 }
 
 .header.active .searchBar {
